--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">StartedServiceDownload</string>
-    <string name="download_async">Сохранить</string>
+    <string name="save_started">Сохранить\n(started service)</string>
     <string name="enter_url">Введите url картинки</string>
+    <string name="save_bound">Сохранить\n(Bound service)</string>
 </resources>
